# kaswallet

./: .gitignore  ALGORITHMIC-PERF-ANALYSIS.md  BUGS.md  Cargo.toml  Dockerfile  LOCK-CONTENTION-SOLUTION.md  PERF_OPTIMIZATIONS-REVIEW.md  PERF_OPTIMIZATIONS.md  README.md  RUSTY-KASPA-RPC-OPPORTUNITIES.md  deny.toml  docker-compose.yml  test_plan.md
.github/workflows/: build-and-test.yml  dependency-audit.yml  docker-build-check.yml  docker-publish.yml  linter.yml  ub-detection.yml
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  main.rs  utils.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs  model.rs  status_classify.rs
common/: Cargo.toml
common/src/: addresses.rs  args.rs  encrypted_mnemonic.rs  error_location.rs  errors.rs  keys.rs  lib.rs  model.rs  proto_convert.rs  transactions_encoding.rs
common/src/errors/: config.rs  crypto.rs  mod.rs  root.rs  rpc.rs  status_mapping_tests.rs  storage.rs  sync.rs  transaction.rs  user_input.rs
core/: Cargo.toml  build.rs
core/proto/: wallet.proto
core/src/: args.rs  encrypted_mnemonic.rs  keys.rs  lib.rs
create/: Cargo.toml
create/src/: args.rs  generate_keys_file.rs  main.rs
daemon/: Cargo.toml
daemon/benches/: address_scaling.rs  from_addresses_filter.rs  old_vs_new.rs  utxo_contention.rs  utxo_scaling.rs
daemon/src/: address_manager.rs  args.rs  daemon.rs  kaspad_client.rs  log.rs  main.rs  model.rs  service.rs  sync.rs  sync_manager.rs  transaction_generator.rs  utxo_manager.rs
daemon/src/service/: broadcast.rs  common.rs  create_unsigned_transaction.rs  get_addresses.rs  get_balance.rs  get_utxos.rs  kaswallet_service.rs  mod.rs  new_address.rs  send.rs  service.rs  sign.rs
dump-mnemonics/: Cargo.toml
dump-mnemonics/src/: args.rs  main.rs
kaswallet_proto/: Cargo.toml
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  mod.rs  wallet.proto
test/helpers/: Cargo.toml
test/helpers/fixtures/: override_params.json
test/helpers/src/: create.rs  lib.rs  mine_block.rs  mnemonics.rs  start_daemon.rs
test/integration/: Cargo.toml
test/integration/src/: lib.rs  p2pk_test.rs  subnetwork_id_test.rs
test_client/: Cargo.toml
test_client/src/: main.rs
tests/integration/: Cargo.toml
tests/integration/fixtures/: override_params.json
tests/integration/src/: lib.rs  wallet_integration_tests.rs
wallet_proto/: Cargo.toml
wallet_proto/proto/: wallet.proto
wallet_proto/src/: lib.rs  wallet_proto.rs
