[workspace]
resolver = "2"
members = [
    "common",
    "create",
    "daemon", "dump-mnemonics",
    "test_client"
]

[workspace.package]
rust-version = "1.85.0"
version = "0.1.1"
edition = "2024"
authors = ["Kaspa Developers", "IgraNet Developers"]
license = "ISC"
repository = "https://github.com/IgraLabs/kaswallet"
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "src/**/*.r",
    "proto/**/*.proto",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[workspace.dependencies]
common = { path = "common" }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rand = "0.9.0"
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1" }
chacha20 = { version = "0.9.1" }
kaswallet-proto = { git = "https://github.com/IgraLabs/kaswallet-proto.git" }
kaspa-consensus-core = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet-clean" }
kaspa-bip32 = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet-clean" }
kaspa-hashes = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet-clean" }
kaspa-addresses = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet-clean" }
kaspa-wrpc-client = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet-clean" }
hex = "0.4.3"
rand_core = "0.9.2"
regex = "1.11.1"
shellexpand = "3.1.0"
log = "0.4.26"
thiserror = "2.0.17"
tonic = "0.14.2"
borsh = "1.5.7"
clap = { version = "4.5.31", features = ["derive"] }
rpassword = "7.3.1"
constant_time_eq = "0.4.0"
kaspa-txscript = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet-clean" }
kaspa-wallet-core = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet-clean" }
lru = "0.16.2"
itertools = "0.14.0"
log4rs = "1.3.0"
tokio = "1.43.0"
workflow-websocket = "0.18.0"
chrono = "0.4.40"
console-subscriber = "0.5.0"
pprof = { version = "0.15.0", features = ["flamegraph"] }
futures = "0.3.31"
