[package]
name = "common"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "common"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rand = "0.9.0"
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1" }
chacha20 = { version = "0.9.1" }
kaspa-consensus-core = { path = "../../rusty-kaspa/consensus/core" }
kaspa-bip32 = { path = "../../rusty-kaspa/wallet/bip32" }
hex = "0.4.3"
rand_core = "0.9.2"
regex = "1.11.1"
shellexpand = "3.1.0"
log = "0.4.26"