[package]
name = "common"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "common"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rand = "0.9.0"
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1" }
chacha20 = { version = "0.9.1" }
kaswallet-proto = { git = "https://github.com/IgraLabs/kaswallet-proto.git" }
kaspa-consensus-core = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet" }
kaspa-bip32 = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet" }
kaspa-hashes = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet" }
kaspa-addresses = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet" }
kaspa-wrpc-client = { git = "https://github.com/IgraLabs/rusty-kaspa.git", branch = "for-wallet" }
# kaspa-consensus-core = { path = "../../rusty-kaspa/consensus/core" }
# kaspa-bip32 = { path = "../../rusty-kaspa/wallet/bip32" }
# kaspa-hashes = { path = "../../rusty-kaspa/crypto/hashes" }
# kaspa-addresses = { path = "../../rusty-kaspa/crypto/addresses" }
# kaspa-wrpc-client = { path = "../../rusty-kaspa/rpc/wrpc/client" }
hex = "0.4.3"
rand_core = "0.9.2"
regex = "1.11.1"
shellexpand = "3.1.0"
log = "0.4.26"
thiserror = "1.0.69"
tonic = "0.12.3"
borsh = "1.5.7"
