[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rand = "0.9.0"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
kaspa-consensus-core = { path = "../../rusty-kaspa/consensus/core" }
kaspa-bip32 = { path = "../../rusty-kaspa/wallet/bip32" }
hex = "0.4.3"
rand_core = "0.9.2"
