[package]
name = "create"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kaswallet-create"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
clap = { version = "4.5.31", features = ["derive"] }
rpassword = "7.3.1"
constant_time_eq = "0.4.0"
kaspa-consensus-core = { path = "../../rusty-kaspa/consensus/core" }
kaspa-bip32 = { path = "../../rusty-kaspa/wallet/bip32" }