[package]
name = "daemon"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kaswallet-daemon"
path = "src/main.rs"

[dependencies]
common.workspace = true
kaswallet-proto.workspace = true

kaspa-consensus-core.workspace = true
kaspa-bip32.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-txscript.workspace = true
kaspa-addresses.workspace = true
kaspa-wallet-core.workspace = true

clap = { workspace = true, features = ["derive"] }
itertools.workspace = true
log.workspace = true
log4rs.workspace = true
tonic.workspace = true
tokio.workspace = true
workflow-websocket.workspace = true
console-subscriber.workspace = true