[package]
name = "kaswallet-daemon"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kaswallet-daemon"
path = "src/main.rs"

[[bin]]
name = "kaswallet-stress-bench"
path = "src/bin/kaswallet_stress_bench.rs"
required-features = ["bench"]

[dependencies]
kaswallet-common.workspace = true
kaswallet-proto.workspace = true

kaspa-consensus-core.workspace = true
kaspa-bip32.workspace = true
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-addresses.workspace = true
kaspa-wallet-core.workspace = true

clap = { workspace = true, features = ["derive"] }
itertools.workspace = true
log.workspace = true
log4rs.workspace = true
tonic.workspace = true
tokio.workspace = true
console-subscriber.workspace = true
thiserror.workspace = true

[features]
bench = []

[dev-dependencies]
kaspa-consensus.workspace = true
kaspa-hashes.workspace = true
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "address_scaling"
harness = false
required-features = ["bench"]

[[bench]]
name = "utxo_scaling"
harness = false
required-features = ["bench"]

[[bench]]
name = "from_addresses_filter"
harness = false
required-features = ["bench"]
