[package]
name = "kaswallet-proto"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kaswallet_proto"
crate-type = ["cdylib", "lib"]

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.12.3"
