[package]
name = "test_client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaswallet-proto = { path = "../kaswallet_proto" }
kaspa-consensus-core = { path = "../../rusty-kaspa/consensus/core" }
tokio = "1.43.0"
tonic = "0.12.3"
