[package]
name = "test_client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common.workspace = true
kaswallet-proto.workspace = true

kaspa-consensus-core.workspace = true

tokio.workspace = true
tonic.workspace = true
futures.workspace = true
