[package]
name = "wallet_proto"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "wallet_proto"
crate-type = ["cdylib", "lib"]

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.12.3"
