[package]
name = "kaswallet-test-helpers"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
kaswallet-common.workspace = true
kaswallet-create.workspace = true
kaswallet-daemon.workspace = true

kaspa-bip32.workspace = true
kaspad.workspace = true
kaspa-utils.workspace = true
kaspa-testing-integration.workspace = true
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true

tokio.workspace = true
log.workspace = true
thiserror.workspace = true
tempfile.workspace = true
